tests/baselines/reference/arrayTypeOfFunctionTypes2(strict=true).errors.txt
arrayTypeOfFunctionTypes2.ts(4,9): error TS2454: Variable 'x' is used before being assigned.
arrayTypeOfFunctionTypes2.ts(4,9): error TS7053: Element implicitly has an 'any' type because expression of type '1' can't be used to index type 'new () => string[]'.
  Property '1' does not exist on type 'new () => string[]'.
arrayTypeOfFunctionTypes2.ts(9,10): error TS2454: Variable 'x' is used before being assigned.
arrayTypeOfFunctionTypes2.ts(9,10): error TS7053: Element implicitly has an 'any' type because expression of type '1' can't be used to index type 'new () => string[]'.
  Property '1' does not exist on type 'new () => string[]'.
arrayTypeOfFunctionTypes2.ts(14,10): error TS2454: Variable 'x2' is used before being assigned.
arrayTypeOfFunctionTypes2.ts(16,11): error TS2348: Value of type 'new () => string' is not callable. Did you mean to include 'new'?


==== arrayTypeOfFunctionTypes2.ts (6 errors) ====
    // valid uses of arrays of function types
    
    var x: new () => string[];
    var r = x[1];
            ~
!!! error TS2454: Variable 'x' is used before being assigned.
            ~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '1' can't be used to index type 'new () => string[]'.
!!! error TS7053:   Property '1' does not exist on type 'new () => string[]'.
    var r2 = new r();
    var r2b = r();
    
    var x2: { new(): string }[];
    var r3 = x[1];
             ~
!!! error TS2454: Variable 'x' is used before being assigned.
             ~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '1' can't be used to index type 'new () => string[]'.
!!! error TS7053:   Property '1' does not exist on type 'new () => string[]'.
    var r4 = new r3();
    var r4b = new r3();
    
    var x3: Array<new () => string>;
    var r5 = x2[1];
             ~~
!!! error TS2454: Variable 'x2' is used before being assigned.
    var r6 = new r5();
    var r6b = r5();
              ~~~~
!!! error TS2348: Value of type 'new () => string' is not callable. Did you mean to include 'new'?